@startuml

title __SERVICES DOMAIN's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        class com.soundlab.dockerizedjavaapi.services.domain.AdminService {
            + AdminService()
        }
    }
  }


  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        class com.soundlab.dockerizedjavaapi.services.domain.CandidatoService {
            + CandidatoService()
        }
    }
  }


  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        class com.soundlab.dockerizedjavaapi.services.domain.CriterioService {
            + CriterioService()
        }
    }
  }


  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        class com.soundlab.dockerizedjavaapi.services.domain.EmpresaService {
            + EmpresaService()
        }
    }
  }


  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        abstract class com.soundlab.dockerizedjavaapi.services.domain.GenericService {
            + delete()
            + findAll()
            + findById()
            + save()
            + update()
            # GenericService()
        }
      }
  }


  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        class com.soundlab.dockerizedjavaapi.services.domain.RespostaService {
            + RespostaService()
            + findById()
        }
      }
  }


  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        class com.soundlab.dockerizedjavaapi.services.domain.UserService {
            + UserService()
            + findByDocumentIdOrEmail()
            + findByEmail()
        }
      }
  }


  namespace com.soundlab.dockerizedjavaapi {
    namespace services.domain {
        class com.soundlab.dockerizedjavaapi.services.domain.VagaService {
            + VagaService()
            + findById()
            + listByCandidateAnswers()
            + listByInclusionType()
            + listByOwner()
            + listLatestAvailable()
        }
    }
  }


  com.soundlab.dockerizedjavaapi.services.domain.AdminService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.CandidatoService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.CriterioService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.EmpresaService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.GenericService o-- T : repository
  com.soundlab.dockerizedjavaapi.services.domain.RespostaService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.UserService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService
  com.soundlab.dockerizedjavaapi.services.domain.VagaService -up-|> com.soundlab.dockerizedjavaapi.services.domain.GenericService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
